--- a/kernel/samsung/msm8976/arch/arm64/configs/gts28velte_defconfig
+++ b/kernel/samsung/msm8976/arch/arm64/configs/gts28velte_defconfig
@@ -5,14 +5,20 @@ CONFIG_HIGH_RES_TIMERS=y
 CONFIG_RCU_FAST_NO_HZ=y
 CONFIG_LOG_BUF_SHIFT=19
 CONFIG_CGROUPS=y
-CONFIG_CGROUP_FREEZER=y
+CONFIG_CGROUP_BPF=y
+CONFIG_CGROUP_DEVICE=y
+CONFIG_CGROUP_PERF=y
+CONFIG_CGROUP_DEBUG=y
+CONFIG_CGROUP_PIDS=y
+CONFIG_CGROUP_RDMA=y
+CONFIG_CGROUP_HUGETLB=y
+CONFIG_CGROUP_NET_PRIO=y
+CONFIG_CGROUP_NET_CLASSID=y
+CONFIG_CGROUP_MISC=y
+CONFIG_CGROUP2=y
 CONFIG_CPUSETS=y
-CONFIG_CGROUP_CPUACCT=y
 CONFIG_RESOURCE_COUNTERS=y
-CONFIG_CGROUP_SCHED=y
 CONFIG_RT_GROUP_SCHED=y
-CONFIG_SCHED_HMP=y
-CONFIG_SCHED_TASK_BEHAVIOR=y
 CONFIG_NAMESPACES=y
 # CONFIG_UTS_NS is not set
 # CONFIG_IPC_NS is not set
@@ -22,13 +28,12 @@ CONFIG_BLK_DEV_INITRD=y
 CONFIG_RD_BZIP2=y
 CONFIG_RD_LZMA=y
 CONFIG_CC_OPTIMIZE_FOR_SIZE=y
-CONFIG_PANIC_TIMEOUT=5
 CONFIG_KALLSYMS_ALL=y
 CONFIG_EMBEDDED=y
 CONFIG_SEC_VM_EVENT_STATE_TRACER=y
 # CONFIG_SLUB_DEBUG is not set
 CONFIG_PROFILING=y
-CONFIG_CC_STACKPROTECTOR_REGULAR=y
+CONFIG_CC_STACKPROTECTOR_STRONG=y
 CONFIG_ARCH_MMAP_RND_COMPAT_BITS=16
 CONFIG_SYSTEM_TRUSTED_KEYRING=y
 CONFIG_PARTITION_ADVANCED=y
@@ -106,6 +111,9 @@ CONFIG_INET6_IPCOMP=y
 CONFIG_IPV6_MIP6=y
 CONFIG_IPV6_MULTIPLE_TABLES=y
 CONFIG_IPV6_SUBTREES=y
+CONFIG_MEMCG=y
+CONFIG_MEMCG_SWAP=y
+CONFIG_MEMCG_KMEM=y
 CONFIG_NETFILTER=y
 CONFIG_NF_CONNTRACK=y
 CONFIG_NF_CONNTRACK_SECMARK=y
@@ -327,7 +335,6 @@ CONFIG_HW_RANDOM_MSM=y
 CONFIG_MSM_SMD_PKT=y
 CONFIG_MSM_ADSPRPC=y
 CONFIG_MSM_RDBG=y
-CONFIG_KNOX_KAP=y
 CONFIG_I2C=y
 CONFIG_I2C_CHARDEV=y
 CONFIG_I2C_GPIO=y
@@ -540,8 +547,6 @@ CONFIG_UIO_MSM_SHAREDMEM=y
 CONFIG_STAGING=y
 CONFIG_ANDROID=y
 CONFIG_ASHMEM=y
-CONFIG_ANDROID_LOW_MEMORY_KILLER=y
-CONFIG_ANDROID_INTF_ALARM_DEV=y
 CONFIG_ION=y
 CONFIG_ION_MSM=y
 CONFIG_VNSWAP=y
@@ -592,7 +597,8 @@ CONFIG_CHARGER_SM5703_DUALPATH=y
 CONFIG_CHARGER_SM5705=y
 CONFIG_SAMSUNG_LPM_MODE=y
 CONFIG_SW_SELF_DISCHARGING=y
-CONFIG_ANDROID_BINDER_IPC=y
+CONFIG_ANDROID_BINDERFS=y
+CONFIG_ANDROID_BINDER_DEVICES="binder,hwbinder,vndbinder"
 CONFIG_SENSORS=y
 CONFIG_SENSORS_CORE=y
 CONFIG_MSM_BAM_DMUX=y
@@ -626,13 +632,7 @@ CONFIG_MSM_CORE_CTL=y
 CONFIG_MSM_PERFORMANCE=y
 # CONFIG_MSM_PERFORMANCE_HOTPLUG_ON is not set
 CONFIG_MSM_VSENS=y
-CONFIG_SEC_DEBUG=y
-CONFIG_SEC_DEBUG_SCHED_LOG=y
-CONFIG_SEC_DEBUG_IRQ_EXIT_LOG=y
-CONFIG_SEC_DEBUG_SUMMARY=y
 CONFIG_SEC_LOG_LAST_KMSG=y
-CONFIG_SEC_BSP=y
-CONFIG_SEC_SSR_DEBUG_LEVEL_CHK=y
 CONFIG_MEM_SHARE_QMI_SERVICE=y
 CONFIG_USER_RESET_DEBUG=y
 CONFIG_MSM_TZ_LOG=y
@@ -645,14 +645,11 @@ CONFIG_EXT4_FS=y
 CONFIG_EXT4_FS_SECURITY=y
 CONFIG_FUSE_FS=y
 CONFIG_VFAT_FS=y
-CONFIG_SDFAT_FS=y
 CONFIG_SDFAT_SUPPORT_DIR_SYNC=y
 CONFIG_SDFAT_CHECK_RO_ATTR=y
 # CONFIG_SDFAT_DEBUG is not set
-CONFIG_EXFAT_FS=y
 CONFIG_TMPFS=y
 CONFIG_ECRYPT_FS=y
-CONFIG_SDCARD_FS=y
 CONFIG_PSTORE=y
 CONFIG_PSTORE_CONSOLE=y
 CONFIG_PSTORE_PMSG=y
@@ -660,22 +657,16 @@ CONFIG_PSTORE_PMSG_SSPLOG=y
 CONFIG_PSTORE_RAM=y
 CONFIG_F2FS_FS=y
 CONFIG_F2FS_FS_SECURITY=y
-CONFIG_NLS_ASCII=y
+CONFIG_F2FS_FS_XATTR=y
+CONFIG_F2FS_FS_POSIX_ACL=y
 CONFIG_PRINTK_TIME=y
 CONFIG_MAGIC_SYSRQ=y
 # CONFIG_SCHED_DEBUG is not set
-CONFIG_SCHEDSTATS=y
-# CONFIG_DEBUG_PREEMPT is not set
 # CONFIG_DEBUG_BUGVERBOSE is not set
-CONFIG_DEBUG_INFO=y
-CONFIG_DEBUG_NOTIFIERS=y
 CONFIG_MSM_RTB=y
 CONFIG_MSM_RTB_SEPARATE_CPUS=y
 CONFIG_IPC_LOGGING=y
-CONFIG_SEC_PM_DEBUG=y
 CONFIG_RESTART_REASON_SEC_PARAM=y
-CONFIG_SEC_RESTRICT_ROOTING=y
-CONFIG_SEC_RESTRICT_ROOTING_LOG=y
 CONFIG_UNUSED_PR_SET_TIMERSLACK_PID=y
 CONFIG_KEYS=y
 CONFIG_KEYS_DEBUG_PROC_KEYS=y
@@ -684,6 +675,8 @@ CONFIG_SECURITY=y
 CONFIG_SECURITY_NETWORK=y
 CONFIG_LSM_MMAP_MIN_ADDR=4096
 CONFIG_SECURITY_SELINUX=y
+CONFIG_SECURITY_SELINUX_BOOTPARAM=y
+CONFIG_SECURITY_SELINUX_DISABLE=y
 CONFIG_TZ_ICCC=y
 CONFIG_CRYPTO_NULL=y
 CONFIG_CRYPTO_CTR=y
@@ -708,3 +701,39 @@ CONFIG_CRYPTO_AES_ARM64_CE_BLK=y
 CONFIG_CRYPTO_AES_ARM64_NEON_BLK=y
 CONFIG_CRYPTO_CRC32_ARM64=y
 CONFIG_QMI_ENCDEC=y
+CONFIG_OVERLAY_FS=y
+
+# === Android 14/15 modern additions ===
+CONFIG_ANDROID_BINDERFS=y
+CONFIG_ANDROID_BINDER_DEVICES="binder,hwbinder,vndbinder"
+CONFIG_ANDROID_BINDERFS_SECURITY=y
+
+CONFIG_CGROUPS=y
+CONFIG_CGROUP2=y
+CONFIG_CGROUP_WRITEBACK=y
+CONFIG_MEMCG=y
+CONFIG_MEMCG_SWAP=y
+CONFIG_MEMCG_KMEM=y
+
+CONFIG_UTS_NS=y
+CONFIG_IPC_NS=y
+CONFIG_PID_NS=y
+
+CONFIG_OVERLAY_FS=y
+CONFIG_FS_VERITY=y
+CONFIG_FS_VERITY_BUILTIN_SIGNATURES=y
+
+CONFIG_ZSWAP=y
+CONFIG_ZSWAP_COMPACTION=y
+CONFIG_ZSMALLOC=y
+CONFIG_ZSMALLOC_STAT=y
+
+CONFIG_SCHED_MC=y
+CONFIG_SCHED_AUTOGROUP=y
+CONFIG_SCHED_CORE=y
+
+CONFIG_PANIC_TIMEOUT=3
+# CONFIG_DEBUG_INFO is not set
+# CONFIG_SCHEDSTATS is not set
+# CONFIG_DEBUG_PREEMPT is not set
+# CONFIG_DEBUG_NOTIFIERS is not set
